combined a bunch of html from various places into Developmet2.html

--- a/development.html
+++ b/development.html
@@ -324,82 +324,22 @@
   </div> -->
 
 
-  <div class="app-price-plans">
-    <div class="container text-center">
-
-      <div class="row price-head-row">
-        <div class="pricing-head col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3">
-          <h2 class="m-t-md text-uppercase">Cloud, Dedicated, and Enterprise Plans</h2>
-          <p  class="m-t-0 text-muted">Each hosting type has multiple options to choose from. Our experts consider your speed needs, budget, and other factors to help you find the right fit. Come on, get some great speed advice and smile again.</p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="pricing-box col-sm-4 m-b-sm">
-          <div class="p-x">
-            <h3 class="text-muted text-uppercase m-b">Cloud</h3>
-            <img class="price-img m-b" alt="cloud hosting pricing" src="./docs/assets/img//startup-15.svg">
-            <p>Plenty of processing power for any personal projects, big or small.</p>
-          </div>
-
-          <ul class="list-unstyled list-bordered list-features m-y-md">
-            <!-- <li class="p-y"><strong>10k</strong> monthly requests</li> -->
-            <!-- <li class="p-y"><strong>9am-5pm</strong> technical supprt</li> -->
-            <!-- <li class="p-y"><strong>Public</strong> API access</li> -->
-          </ul>
-        </div>
-
-        <div class="pricing-box col-sm-4 m-b-sm">
-          <div class="p-x">
-            <h3 class="text-muted text-uppercase m-b">Dedicated</h3>
-            <img class="price-img m-b" alt="dedicated hosting pricing" src="./docs/assets/img//startup-16.svg">
-            <p>The perfect sized plan for small businesses to get started.</p>
-          </div>
-
-          <ul class="list-unstyled list-bordered list-features m-y-md">
-            <!-- <li class="p-y"><strong>100k</strong> monthly requests</li> -->
-            <!-- <li class="p-y"><strong>24/7</strong> technical supprt</li> -->
-            <!-- <li class="p-y"><strong>Public</strong> API access</li> -->
-          </ul>
-        </div>
-
-        <div class="pricing-box col-sm-4 m-b-sm">
-          <div class="p-x">
-            <h3 class="text-muted text-uppercase m-b">Enterprise</h3>
-            <img class="price-img m-b p-a-sm" alt="enterprise hosting pricing" src="./docs/assets/img/startup-17.svg">
-            <p>An unlimited plan that will scale infinitely to any size project.</p>
-          </div>
-
-          <ul class="list-unstyled list-bordered list-features m-y-md">
-            <!-- <li class="p-y"><strong>Unlimited</strong> monthly requests</li> -->
-            <!-- <li class="p-y"><strong>24/7</strong> technical supprt</li> -->
-            <!-- <li class="p-y"><strong>Public & Private</strong> API access</li> -->
-          </ul>
-        </div>
-      </div>
-
-      <div class="">
-        <button data-target="#submodal" data-toggle="modal" class="btn btn-lg btn-primary footer-btn w-md m-t-md m-b-lg">Start an account</button>
-      </div>
-
-      <div class="row">
-        <h3 class="m-t-md"><strong>Questions?</strong></h3>
-        <p class="m-t-sm m-b-0 lead">Call one of our Magento speed experts:</p>
-        <div class="panel narrow">
-          <div class="panel-body p-b-lg">
-            <ul class="m-t-md list-inline">
-              <li><img class="phone-icon" alt="give us a call" src="./docs/assets/svg/phone-icon.svg" height="28"></li>
-              <li><h3 class="m-t-md text-muted"><span class="m-r-sm icon brand-primary"></span> 888-495-2089</h3></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
+  <div class="block block-bordered-lg text-center">
+    <div class="container-fluid">
+      <p class="lead m-b-md">
+        Join over 900,000 nerds already using Mochi. Get the Mochi App <strong>free</strong> forever!
+      </p>
+      <form class="form-inline">
+        <input class="form-control m-b" placeholder="Email Address">
+        <input class="form-control m-b" type="password" placeholder="Create a Password">
+        <button class="btn btn-primary m-b">Get started</button>
+      </form>
+      <small class="text-muted">
+        By clicking "Get started" I agree to Mochi's
+        <a href="#">Terms of service</a>
+      </small>
     </div>
   </div>
-
 
   <div class="" id="footer">
     <div class="text-center m-t-md m-b">
