Updated some copy/formatting

--- a/development2.html
+++ b/development2.html
@@ -104,10 +104,10 @@
       <div class="col-sm-5">
         <!-- <h1 class="brand-primary"><strong>Snap!</strong></h1> -->
         <h3 class="blaze m-t-md m-b-0">Expert</h3>
-        <h1 class="m-b-md m-t-0"><strong>Magento™ Development</strong></h1>
+        <h1 class="m-b-md m-t-0"><strong>Magento</strong>™ <strong>Development</strong></h1>
         <img class="speed-gfx visible-xs" alt="faster load times than the competition" src="./docs/assets/svg/gfx-hero1.2.svg">
-      <h3 class="m-b-sm text-muted-sm">Get a <a href="#submodal" data-toggle="modal"><strong>free Magento™ Optimization Analysis.</strong></a></h3>
-        <p class="text-uppercase text-muted">In 3 Days</p>
+      <h3 class="m-b-sm text-muted-sm">Get a <a href="#submodal" data-toggle="modal"><strong>free Magento™ Speed Report.</strong></a></h3>
+        <p class="text-uppercase text-muted">Instantly</p>
         <script type="text/javascript">var submitted=false;</script>
         <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"
     onload="if(submitted) {window.location='https://www.snapfast.com/hosting/thanks.html';}"></iframe>
@@ -133,13 +133,12 @@
 
   <div class="block block-secondary app-block-marketing-grid">
     <div class="container text-center">
-      <h6 class="text-muted text-uppercase">Performance Boost</h6>
-      <h3 class="m-t-0 fw-300">WE ARE EXPERT Magento&trade; DEVELOPERS.</h3>
+      <h6 class="text-muted text-uppercase">We do it all:</h6>
+      <br><h3 class="m-t-0 fw-300">We are expert Magento&trade; developers</h3>
       <p class="lead text-muted m-b-md">Magento™ offers powerful ecommerce functionality, but it can also be a lot to tackle. Let us handle your technology, so you can get back to running your business.</p>
       <div class="row m-b-lg">
         <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3">
-          <h6 class="text-muted text-uppercase">Inside the machine</h6>
-          <h3  class="m-t-0 m-b">We do it all:</h3>
+          <h6 class="text-muted text-uppercase"></h6>
         </div>
       </div>
 
@@ -175,17 +174,7 @@
     </div>
   </div>
 
-  <div class="block app-ribbon p-y-lg">
-    <div class="container text-center">
-      <img src="dist/img/startup-4.svg">
-      <img src="dist/img/startup-5.svg">
-      <img src="dist/img/startup-6.svg">
-      <img src="dist/img/startup-7.svg">
-      <img src="dist/img/startup-8.svg">
-    </div>
-  </div>
-
-<div class="block">
+<div class="block block-bordered-lg"">
   <div class="container text-center app-translate-15" data-transition="entrance">
     <blockquote class="pull-quote">
       <img class="img-circle" alt="Robb Price- loyal customer" src="./docs/assets/img/avatar-mdo.png">
@@ -197,7 +186,15 @@
   </div>
 </div>
 
-
+<div class="block app-ribbon p-y-lg" style="background-color: #288feb;">
+  <div class="container text-center">
+    <img src="dist/img/startup-4.svg">
+    <img src="dist/img/startup-5.svg">
+    <img src="dist/img/startup-6.svg">
+    <img src="dist/img/startup-7.svg">
+    <img src="dist/img/startup-8.svg">
+  </div>
+</div>
 
 
 <div class="block block-secondary app-block-marketing-grid">
@@ -280,17 +277,14 @@
 <div class="block block-bordered-lg text-center">
   <div class="container-fluid">
     <p class="lead m-b-md">
-      Join over 900,000 nerds already using Mochi. Get the Mochi App <strong>free</strong> forever!
+      Ditch the 900,000 companies who are using Magento WRONG. Get your <strong>free</strong> Magento Speed Report!
     </p>
     <form class="form-inline">
       <input class="form-control m-b" placeholder="Email Address">
       <input class="form-control m-b" type="password" placeholder="Phone Number">
       <button class="btn btn-primary m-b">Get started</button>
     </form>
-    <small class="text-muted">
-      By clicking "Get started" I agree to Mochi's
-      <a href="#">Terms of service</a>
-    </small>
+    <small class="text-muted btn-caption">Can't wait? Call <span class="brand-primary">888-495-2089</span> (8am - 5pm MDT)</small>
   </div>
 </div>
 
