--- a/development2.html
+++ b/development2.html
@@ -239,7 +239,7 @@
   </div>
 </div>
 
-<div class="block block-inverse block-secondary app-code-block">
+<!-- <div class="block block-inverse block-secondary app-code-block">
   <div class="container">
     <div class="row app-align-center">
       <div class="col-sm-5 col-sm-push-7">
@@ -286,7 +286,7 @@
     </form>
     <small class="text-muted btn-caption">Can't wait? Call <span class="brand-primary">888-495-2089</span> (8am - 5pm MDT)</small>
   </div>
-</div>
+</div> -->
 
 <div class="" id="footer">
   <div class="text-center m-t-md m-b">
