--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
       </div>
 
       <div class="">
-        <button data-target="#modal" data-toggle="modal" class="btn btn-lg btn-primary footer-btn w-md m-t-md m-b-lg">Start an account</button>
+        <button data-target="#submodal" data-toggle="modal" class="btn btn-lg btn-primary footer-btn w-md m-t-md m-b-lg">Start an account</button>
       </div>
 
       <div class="row">
@@ -321,7 +321,7 @@
 
 
 <!-- Modals -->
-<div class="modal fade" id="submodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="submodal" tabindex="-1" role="dialog" aria-labelledby="submodalLabel">
   <div class="vertical-alignment-helper">
     <div class="modal-dialog vertical-align-center" role="document">
       <div class="modal-content">
@@ -345,7 +345,7 @@
 </div>
 
 
-<div class="modal" id="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal" id="modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel">
   <div class="vertical-alignment-helper-1">
     <div class="modal-dialog vertical-align-center" role="document">
       <div class="modal-content brand-bg">
@@ -361,13 +361,13 @@
           <div class="modal-fields">
             <!-- <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"
         onload="if(submitted) {window.location='https://www.snapfast.com/hosting/thanks.html';}"></iframe> -->
-              <form action="" method="post" id="ss-form" target="hidden_iframe"
-        onsubmit="submitted=true;">
+              <form action="//masonlawlor.us8.list-manage.com/subscribe/post?u=284e326d5adb7f537c7cc1bde&amp;id=da66281ee8" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
               <fieldset class="form-group">
-                <input type="text" name="entry.1510303287" class="form-control ss-q-short" id="entry_1510303287" dir="auto" placeholder="Email address..">
+                <input type="email" name="EMAIL" class="form-control required email" id="mce-EMAIL" placeholder="Email address..">
               </fieldset>
               <input type="submit" name="Free Preview" id="ss-submit" class="btn btn-lg btn-success hero-btn jfk-button jfk-button-action">
             </form>
+            <center><a href="" type="text" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">no thanks</span></a></center>
           </div>
         </div>
         <div class="modal-footer">
@@ -377,8 +377,8 @@
     </div>
   </div>
 </div>
-
-
+    <!-- Mailchimp Script -->
+    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
     <!-- For some reason jquery should be in the script below, but it's not -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js">
     </script>
@@ -394,9 +394,9 @@
         callback: function() { console.log('ouibounce fired!'); }
       });
 
-      $('body').on('click', function() {
-        $('#modal').hide();
-      });
+      // $('body').on('click', function() {
+      //   $('#modal').hide();
+      // });
 
       $('#modal .modal-footer').on('click', function() {
         $('#modal').hide();
