new google form to bypass double optin

--- a/index.html
+++ b/index.html
@@ -359,11 +359,10 @@
             <li>Free!</li>
           </ul>
           <div class="modal-fields">
-            <!-- <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"
-        onload="if(submitted) {window.location='https://www.snapfast.com/hosting/thanks.html';}"></iframe> -->
-              <form action="//masonlawlor.us8.list-manage.com/subscribe/post?u=284e326d5adb7f537c7cc1bde&amp;id=da66281ee8" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='https://www.snapfast.com/hosting/thanks.html';}"></iframe>
+              <form action="https://docs.google.com/forms/d/1Ef9T0RsgNdI1ugx5ocb46MKdh7Yx_eK4Ec5cRr5N7Ug/formResponse" method="post" id="ss-form" target="hidden_iframe" onsubmit="submitted=true;">
               <fieldset class="form-group">
-                <input type="email" name="EMAIL" class="form-control required email" id="mce-EMAIL" placeholder="Email address..">
+                <input type="text" name="entry.1510303287" class="form-control ss-q-short" id="entry_1510303287" dir="auto" placeholder="Phone or Email">
               </fieldset>
               <input type="submit" name="Free Preview" id="ss-submit" class="btn btn-lg btn-success hero-btn jfk-button jfk-button-action">
             </form>
