--- a/index.html
+++ b/index.html
@@ -359,12 +359,13 @@
             <li>Free!</li>
           </ul>
           <div class="modal-fields">
-            <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='https://www.snapfast.com/hosting/thanks.html';}"></iframe>
-              <form action="https://docs.google.com/forms/d/1Ef9T0RsgNdI1ugx5ocb46MKdh7Yx_eK4Ec5cRr5N7Ug/formResponse" method="post" id="ss-form" target="hidden_iframe" onsubmit="submitted=true;">
-              <fieldset class="form-group">
-                <input type="text" name="entry.1510303287" class="form-control ss-q-short" id="entry_1510303287" dir="auto" placeholder="Phone or Email">
-              </fieldset>
-              <input type="submit" name="Free Preview" id="ss-submit" class="btn btn-lg btn-success hero-btn jfk-button jfk-button-action">
+            <form method="POST" action="https://api.cloudstitch.com/jackalopemedia/magic-form/datasources/sheet" class="magic-form">
+              <div class="form-group">
+                <input name="FirstName" class="form-control" placeholder="email address..">
+              </div>
+              <div class="form-group">
+                <button type="submit" class="btn btn-lg btn-success hero-btn form-btn">Speed Me Up!</button>
+              </div>
             </form>
             <center><a href="" type="text" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">no thanks</span></a></center>
           </div>
@@ -404,6 +405,44 @@
       $('#modal .modal').on('click', function(e) {
         e.stopPropagation();
       });
+    </script>
+
+    <script>
+    module.exports.beforeRender = function(elem, data) {
+      console.log("Hi there, before render!");
+      }
+
+      module.exports.afterRender = function(elem, data) {
+      /*
+       * Here is an example of
+       */
+      var sendForm = function() {
+        var magicForm = document.getElementsByClassName('magic-form')[0];
+        var xhr = new XMLHttpRequest();
+        xhr.open(magicForm.getAttribute('method'), magicForm.getAttribute('action'));
+        xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+        xhr.setRequestHeader('X-Requested-With', 'XMLHttpRequest');
+        xhr.onload = function() {
+          alert("Response Code: " + xhr.status + "\nResponse Text: " + xhr.responseText);
+        };
+        var inputs = magicForm.getElementsByTagName('INPUT');
+        var pairs = [];
+        for (var i = 0; i < inputs.length; i++) {
+          pairs.push(encodeURI(inputs[i].getAttribute('name')) + '=' + encodeURI(inputs[i].value));
+        }
+        xhr.send(pairs.join('&'));
+      }
+
+      /*
+       * Here we'll just wire up the event listener
+       */
+      document.getElementById('ajaxSubmit').addEventListener('click', function(e) {
+        e.stopPropagation();
+        e.preventDefault();
+        sendForm();
+        return false;
+      }, true);
+      }
     </script>
 
     <!-- g.analytics -->
