--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                 <button type="submit" class="btn btn-lg btn-success hero-btn form-btn">Speed Me Up!</button>
               </div>
             </form>
-            <center><a href="" type="text" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">no thanks</span></a></center>
+            <center><span style="color: white; cursor: pointer;" type="text" class="close" data-dismiss="modal" aria-label="Close">no thanks</span></center>
           </div>
         </div>
         <div class="modal-footer">
@@ -394,9 +394,9 @@
         callback: function() { console.log('ouibounce fired!'); }
       });
 
-      // $('body').on('click', function() {
-      //   $('#modal').hide();
-      // });
+      $('body').on('click', function() {
+        $('#modal').hide();
+      });
 
       $('#modal .modal-footer').on('click', function() {
         $('#modal').hide();
@@ -404,6 +404,17 @@
 
       $('#modal .modal').on('click', function(e) {
         e.stopPropagation();
+      });
+    </script>
+
+    <script>
+      var loading_dialog = $('#loading_dialog');
+      loading_dialog
+        .ajaxStart(function () {
+            loading_dialog.modal('show');
+        })
+        .ajaxStop(function () {
+            loading_dialog.modal('hide');
       });
     </script>
 
