--- a/speed-analysis.html
+++ b/speed-analysis.html
@@ -102,7 +102,7 @@
         <!-- <h1 class="brand-primary"><strong>Snap!</strong></h1> -->
         <h3 class="blaze m-t-md m-b-0">Expert</h3>
         <h1 class="m-b-md m-t-0"><strong>Magento</strong>™ <strong>Development</strong></h1>
-        <img class="speed-gfx visible-xs" alt="faster load times than the competition" height="250px" src="./docs/assets/svg/speed-report.svg">
+        <img class="speed-gfx visible-xs" alt="faster load times than the competition" height="250px" src="./docs/assets/svg/gfx-hero1.2.svg">
       <h3 class="m-b-sm text-muted-sm">Get a <a href="#submodal" data-toggle="modal"><strong>free Magento™ Speed Report.</strong></a></h3>
         <p class="text-uppercase text-muted">Instantly</p>
         <script type="text/javascript">var submitted=false;</script>
@@ -121,7 +121,7 @@
       <div class="hidden-xs col-sm-6 col-sm-offset-1">
         <div id="table">
           <div id="table-cell">
-              <img class="speed-gfx" src="./docs/assets/svg/speed-report.svg">
+              <img class="speed-gfx" src="./docs/assets/svg/gfx-hero1.2.svg">
           </div>
         </div>
         </div>
@@ -202,7 +202,7 @@
                 <button type="submit" class="btn btn-lg btn-success hero-btn form-btn">Speed Me Up!</button>
               </div>
             </form>
-            <center><span style="color: white; cursor: pointer;" type="text" class="close" data-dismiss="modal" aria-label="Close">no thanks</span></center>
+            <center><a href="https://www.snapfast.com/hosting" type="text" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">no thanks</span></a></center>
           </div>
         </div>
         <div class="modal-footer">
@@ -229,9 +229,9 @@
         callback: function() { console.log('ouibounce fired!'); }
       });
 
-      $('body').on('click', function() {
-        $('#modal').hide();
-      });
+      // $('body').on('click', function() {
+      //   $('#modal').hide();
+      // });
 
       $('#modal .modal-footer').on('click', function() {
         $('#modal').hide();
