put speed report graphic back in
idk why it was missing

--- a/speed-analysis.html
+++ b/speed-analysis.html
@@ -102,7 +102,7 @@
         <!-- <h1 class="brand-primary"><strong>Snap!</strong></h1> -->
         <h3 class="blaze m-t-md m-b-0">Expert</h3>
         <h1 class="m-b-md m-t-0"><strong>Magento</strong>™ <strong>Development</strong></h1>
-        <img class="speed-gfx visible-xs" alt="faster load times than the competition" height="250px" src="./docs/assets/svg/gfx-hero1.2.svg">
+        <img class="speed-gfx visible-xs" alt="faster load times than the competition" height="250px" src="./docs/assets/svg/speed-report.svg">
       <h3 class="m-b-sm text-muted-sm">Get a <a href="#submodal" data-toggle="modal"><strong>free Magento™ Speed Report.</strong></a></h3>
         <p class="text-uppercase text-muted">Instantly</p>
         <script type="text/javascript">var submitted=false;</script>
@@ -121,7 +121,7 @@
       <div class="hidden-xs col-sm-6 col-sm-offset-1">
         <div id="table">
           <div id="table-cell">
-              <img class="speed-gfx" src="./docs/assets/svg/gfx-hero1.2.svg">
+              <img class="speed-gfx" src="./docs/assets/svg/speed-report.svg">
           </div>
         </div>
         </div>
