added thanks2.html and disable speed report.html's modal text link

--- a/speed-analysis.html
+++ b/speed-analysis.html
@@ -103,7 +103,7 @@
         <h3 class="blaze m-t-md m-b-0">Expert</h3>
         <h1 class="m-b-md m-t-0"><strong>Magento</strong>™ <strong>Development</strong></h1>
         <img class="speed-gfx visible-xs" alt="faster load times than the competition" height="250px" src="./docs/assets/svg/speed-report.svg">
-      <h3 class="m-b-sm text-muted-sm">Get a <a href="#submodal" data-toggle="modal"><strong>free Magento™ Speed Report.</strong></a></h3>
+      <h3 class="m-b-sm text-muted-sm">Get a <a href="#submodal" data-toggle=""><strong>free Magento™ Speed Report.</strong></a></h3>
         <p class="text-uppercase text-muted">Instantly</p>
         <script type="text/javascript">var submitted=false;</script>
         <form method="POST" action="https://api.cloudstitch.com/jackalopemedia/magic-form-1/datasources/sheet" class="magic-form">
