Enabled lead-2 on home, disabled bounce-modal redirect

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 
 
 <!-- Modals -->
-<!-- <div class="modal fade" id="submodal" tabindex="-1" role="dialog" aria-labelledby="submodalLabel">
+<div class="modal fade" id="submodal" tabindex="-1" role="dialog" aria-labelledby="submodalLabel">
   <div class="vertical-alignment-helper">
     <div class="modal-dialog vertical-align-center" role="document">
       <div class="modal-content">
@@ -342,7 +342,7 @@
       </div>
     </div>
   </div>
-</div> -->
+</div>
 
 <!-- Modal -->
 <!-- <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -386,7 +386,7 @@
                 <button type="submit" class="btn btn-lg btn-success hero-btn form-btn">Speed Me Up!</button>
               </div>
             </form>
-            <center><a href="https://www.snapfast.com/hosting/speed-analysis.html" type="text" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">no thanks</span></a></center>
+            <center><a href="https://www.snapfast.com/hosting/" type="text" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">no thanks</span></a></center>
           </div>
         </div>
         <div class="modal-footer">
