--- a/speed-analysis.html
+++ b/speed-analysis.html
@@ -202,7 +202,7 @@
                 <button type="submit" class="btn btn-lg btn-success hero-btn form-btn">Speed Me Up!</button>
               </div>
             </form>
-            <center><a href="https://www.snapfast.com/hosting" type="text" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">no thanks</span></a></center>
+            <center><a href="https://www.snapfast.com/hosting/" type="text" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">no thanks</span></a></center>
           </div>
         </div>
         <div class="modal-footer">
